--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # OpenAI（也支持通义千问、MoonShot、DeepSeek 等模型）
 OPENAI_MODEL=gpt-4o
-OPENAI_API_KEY=sk-xxxxxxxxxxxxxxx
-# OPENAI_BASE_URL=你的大模型接口的 baseURL，比如：https://api.openai.com/v1（注意：一般以 /v1 结尾）
+OPENAI_API_KEY=sk-OwP8Ro5JyuXfi6o34gzOSXAbgsfXM5CYDGWG5F1CS4UTLUk9 
+OPENAI_BASE_URL=https://api.chatanywhere.tech
 
 # Azure OpenAI Service（可选）
 # OPENAI_API_VERSION=2024-04-01-preview
